--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,8 +1,26 @@
 .intro__title {
+  min-width: 690px;
+  min-height: 58px;
   font-family: Inter;
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
   line-height: 58px;
   color: #FFF;
+  margin: 0 0 40px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 109%;
+    min-width: 288px;
+    max-height: 70px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .intro__title {
+    max-width: 720px;
+  }
 }
