--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,6 @@
 .lead__caption {
   max-width: 159px;
-  margin-top: 8px;
+  margin: 8px 0 0;
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
