--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -6,14 +6,14 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .lead__image {
-    max-width: 320px;
+    max-width: 100%;
     max-height: 200px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .lead__image {
-    max-width: 768px;
+    max-width: 100%;
     max-height: 480px;
   }
 }
