--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,6 +3,7 @@
   max-height: 1005px;
   margin: 0 auto;
   padding: 0;
+  box-sizing: border-box;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
