--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -11,4 +11,8 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
+  margin: 0 auto;
+  min-width: 320px;
+  max-width: 1280px;
+  background-color: #2A2C2F;
 }
