--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,11 +1,12 @@
-.intro {
-  max-width: 690px;
-  max-height: 429px;
-  margin: 92px 0 92px 148px;
+.photo-grid__item {
+  max-width: 284px;
+  max-height: 213px;
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .intro {
+  .photo-grid__item {
     max-width: 288px;
     max-height: 754px;
     margin: 64px auto 0;
@@ -13,7 +14,7 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  .intro {
+  .photo-grid__item {
     max-width: 720px;
     max-height: 429px;
     margin: 88px auto 0;
@@ -21,9 +22,8 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .intro {
-    max-width: 690px;
-    max-height: 429px;
-    margin: 92px 0 0 48px;
+  .photo-grid__item {
+    max-width: 300px;
+    max-height: 225px;
   }
 }
