--- a/blocks/header/__lang-list/header__lang-list.css
+++ b/blocks/header/__lang-list/header__lang-list.css
@@ -4,11 +4,11 @@
   justify-content: space-between;
   max-width: 78px;
   padding: 0;
-  margin: 18px 0 6px 0;
+  margin: 18px 0 6px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header__lang-list {
-    margin: 14px 0 4px 0;
+    margin: 14px 0 4px;
   }
 }
