--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,12 +1,9 @@
 .intro__title {
-  min-width: 690px;
-  min-height: 58px;
-  font-family: Inter;
+  max-width: 690px;
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
   line-height: 58px;
-  color: #FFF;
   margin: 0 0 40px;
 }
 
