--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,20 +1,13 @@
 .lead__subtitle {
   margin: 32px auto 64px;
   max-width: 640px;
-  max-height: 72px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
   font-size: 30px;
   line-height: 36px;
-  text-align: center;
-  color: #FFFFFF;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .lead__subtitle {
     max-width: 288px;
-    max-height: 40px;
     font-size: 16px;
     line-height: 20px;
     margin: 16px auto 40px;
@@ -23,6 +16,6 @@
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
   .lead__subtitle {
-    margin: 32px auto 56px;
+    margin-bottom: 56px;
   }
 }
