--- a/blocks/photo-grid/__image/photo-grid__image.css
+++ b/blocks/photo-grid/__image/photo-grid__image.css
@@ -1,3 +1,28 @@
 .photo-grid__image {
+  margin: 0;
+  max-width: 284px;
+  max-height: 213px;
   width: 100%;
+  height: 100%;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .photo-grid__image {
+    max-width: 288px;
+    max-height: 754px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .photo-grid__image {
+    max-width: 720px;
+    max-height: 429px;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .photo-grid__image {
+    max-width: 300px;
+    max-height: 225px;
+  }
 }
