--- a/blocks/paragraphs/paragraphs.css
+++ b/blocks/paragraphs/paragraphs.css
@@ -1,23 +1,23 @@
-.places {
-  margin: 92px auto;
-  max-width: 984px;
+.paragraphs {
+  width: 484px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .places {
-    max-width: 928px;
+  .paragraphs {
+    width: 456px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  .places {
-    max-width: 720px;
+  .paragraphs {
+    width: 352px;
+    height: 442px;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .places {
-    max-width: 320px;
-    max-height: 4786px;
+  .paragraphs {
+    margin: 0 auto;
+    width: 288px;
   }
 }
