--- a/pages/index.css
+++ b/pages/index.css
@@ -34,3 +34,11 @@
 @import url(../blocks/photo-grid/__image/photo-grid__image.css);
 
 @import url(../blocks/places/places.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/website/website.css);
+@import url(../blocks/website/__url-heading/website__url-heading.css);
+@import url(../blocks/website/__link/website__link.css);
+@import url(../blocks/paragraphs/paragraphs.css);
+@import url(../blocks/paragraphs/__text/paragraphs__text.css);
