--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,24 +1,20 @@
-.place__title {
-  margin: 0;
+.cover__title {
+  max-width: 560px;
+  margin: 0 0 32px;
   font-family: Inter;
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
+  text-align: center;
   color: #FFFFFF;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  .place__title {
-    font-size: 42px;
-    line-height: 46px;
-  }
-}
-
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .place__title {
-    margin: 0 auto;
+  .cover__title {
+    max-width: 288px;
     font-size: 32px;
     line-height: 35px;
+    margin: 0 0 16px;
   }
 }
