--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,22 +1,26 @@
-.places {
-  margin: 92px auto 0;
-  max-width: 984px;
+.footer {
+  max-width: 1184px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .places {
+  .footer {
     max-width: 928px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  .places {
+  .footer {
     max-width: 720px;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .places {
-    max-width: 320px;
+  .footer {
+    flex-direction: column;
+    margin: 0 0 0 16px;  
+    max-width: 186px;
   }
 }
