--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,25 +1,26 @@
 .intro {
   max-width: 690px;
+  margin: 92px 0;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .intro {
     max-width: 690px;
-    margin: 92px 0 0 48px;
+    margin: 92px 0;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .intro {
     max-width: 720px;
-    margin: 88px auto 0;
+    margin: 88px auto;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .intro {
     max-width: 288px;
-    margin: 64px auto 0;
+    margin: 64px auto;
   }
 }
 
