--- a/pages/index.css
+++ b/pages/index.css
@@ -5,7 +5,6 @@
 
 @import url(../blocks/title/title.css);
 @import url(../blocks/subtitle/subtitle.css);
-@import url(../blocks/section-space/section-space.css);
 @import url(../blocks/upper-content/upper-content.css);
 
 @import url(../blocks/header/header.css);
@@ -42,3 +41,15 @@
 @import url(../blocks/website/__link/website__link.css);
 @import url(../blocks/paragraphs/paragraphs.css);
 @import url(../blocks/paragraphs/__text/paragraphs__text.css);
+
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__link/cover__link.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__list-item/footer__list-item.css);
+@import url(../blocks/footer/__list-link/footer__list-link.css);
+@import url(../blocks/footer/__list/footer__list.css);
+@import url(../blocks/footer/__navigation/footer__navigation.css);
