--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,9 +2,10 @@
   max-width: 1184px;
   margin: 92px auto;
   position: relative;
-  padding-bottom: 50%;
-  background-image: url(../../../images/cover-trains.jpg);
+  padding-bottom: 58%;
+  background-image: url(../../images/cover-trains.png);
   background-size: cover;
+  font-family: 'Inter', Arial, sans-serif;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
