--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,7 +1,6 @@
 .footer__copyright {
-  max-width: 186px;
+  max-width: 100%;
   margin: 0 0 24px;
-  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
