--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,19 +1,19 @@
 .intro {
+  font-family: 'Inter', Arial, sans-serif;
   max-width: 690px;
   margin: 92px 0;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .intro {
-    max-width: 690px;
-    margin: 92px 0;
+    margin: 92px 0 92px 30px;;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .intro {
     max-width: 720px;
-    margin: 88px auto;
+    margin: 88px 0 88px 24px;;
   }
 }
 
