--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,6 +5,9 @@
   font-size: 96px;
   line-height: 100px;
   text-align: center;
+  margin: 0 auto;
+  padding: 0;
+  color: #FFF;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
