--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,5 +1,4 @@
-.website__link {
-  font-family: Inter;
+.place__link {
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -8,7 +7,7 @@
   color: #FFFFFF;
 }
 
-.website__link:hover {
+.place__link:hover {
   opacity: .8;
   transition: 1s;
 }
