--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,21 +1,21 @@
-.paragraphs {
+.place__paragraphs {
   width: 484px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .paragraphs {
+  .place__paragraphs {
     width: 456px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  .paragraphs {
+  .place__paragraphs {
     width: 352px;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .paragraphs {
+  .place__paragraphs {
     margin: 0 auto;
     width: 288px;
   }
