--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,11 +1,11 @@
-.website {
+.place__website {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .website {
+  .place__website {
     display: none;
   }
 }
