--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,10 +1,9 @@
 .place {
+  font-family: 'Inter', Arial, sans-serif;
   display: grid;
-  grid-template-rows: 152px 460px;
   grid-template-columns: 460px 484px;
   grid-column-gap: 40px;
   grid-row-gap: 48px;
-  margin-bottom: 80px;
 }
 
 .place:nth-last-child(1) {
