--- a/pages/index.css
+++ b/pages/index.css
@@ -1,10 +1,8 @@
-@import url(../russian-travel/vendor/normalize.css);
+@import url(../vendor/normalize.css);
 @import url(../fonts/Inter-Web/inter.css);
 
 @import url(../blocks/page/page.css);
 
-@import url(../blocks/title/title.css);
-@import url(../blocks/subtitle/subtitle.css);
 @import url(../blocks/upper-content/upper-content.css);
 
 @import url(../blocks/header/header.css);
@@ -36,11 +34,11 @@
 @import url(../blocks/place/place.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__image/place__image.css);
-@import url(../blocks/website/website.css);
-@import url(../blocks/website/__url-heading/website__url-heading.css);
-@import url(../blocks/website/__link/website__link.css);
-@import url(../blocks/paragraphs/paragraphs.css);
-@import url(../blocks/paragraphs/__text/paragraphs__text.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__paragraphs/place__paragraphs.css);
+@import url(../blocks/place/__paragraphs-text/place__paragraphs-text.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__website/place__website.css);
 
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__title/cover__title.css);
