--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,7 +2,7 @@
   max-width: 1184px;
   margin: 92px auto;
   position: relative;
-  padding-bottom: 58%;
+  height: 740px;
   background-image: url(../../images/cover-trains.png);
   background-size: cover;
   font-family: 'Inter', Arial, sans-serif;
@@ -11,6 +11,7 @@
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cover {
     max-width: 1024px;
+    height: 640px;
   }
 }
 
@@ -18,6 +19,7 @@
   .cover {
     max-width: 768px;
     margin: 88px auto;
+    height: 480px;
   }
 }
 
@@ -25,5 +27,6 @@
   .cover {
     max-width: 320px;
     margin: 64px auto;
+    height: 200px;
   }
 }
