--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,6 +4,12 @@
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
-  line-height: 16px;
+  
   color: #FFFFFF;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__copyright{
+    line-height: 14px;
+  }  
 }
