--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -18,7 +18,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .place__title {
-    margin: 0 auto;
+    margin-left: 16px;
     font-size: 32px;
     line-height: 35px;
   }
