--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,23 +1,21 @@
 .cover__link {
   text-decoration: none;
-  display: flex;
   height: 100%;
   width: 100%;
+  background: #2a2c2f;
+  background-color: rgba(42, 44, 47, .3);
+  transition: 1s;
+  position: absolute;
+  top: 0;
+  right: 0; 
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.cover__link::after {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0,0,0, 0.3)
+  z-index: 2;
 }
 
 .cover__link:hover {
-  background-color: rgba(0,0,0, 0.8);
-  transition: background 1s;
+  background-color: rgba(42, 44, 47, .8);
+  transition: 1s;
 }
