--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,6 +7,7 @@
   line-height: 76px;
   text-align: center;
   color: #FFFFFF;
+  z-index: 2;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
