--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,13 +1,8 @@
 .cover__link {
   text-decoration: none;
-  height: 100%;
+  min-height: 740px;
   width: 100%;
-  background: #2a2c2f;
   background-color: rgba(42, 44, 47, .3);
-  transition: 1s;
-  position: absolute;
-  top: 0;
-  right: 0; 
   display: flex;
   flex-direction: column;
   justify-content: center;
