--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,6 +4,10 @@
   position: relative;
   height: 740px;
   font-family: 'Inter', Arial, sans-serif;
+  background-image: url(../../../images/cover-trains.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 100% 100%;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
