--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,7 +4,7 @@
   position: relative;
   height: 740px;
   font-family: 'Inter', Arial, sans-serif;
-  background-image: url(../../../images/cover-trains.png);
+  background-image: url(../../images/cover-trains.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 100% 100%;
